# server/internal/docs/swagger.yaml
@@ -133,6 +133,8 @@ definitions:
         type: string
       flavorName:
         type: string
+      liveVersion:
+        type: string
       palCode:
         type: string
       remark:
@@ -266,6 +268,8 @@ definitions:
       appName:
         type: string
       flavorName:
+        type: string
+      liveVersion:
         type: string
       palCode:
         type: string
